--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <!-- Carga de modelos -->
         <a-assets>
           <a-asset-item id="museo2-glb" src="https://bdosantos.github.io/Sigma/museo2.glb"></a-asset-item>
-          <a-assets-item id="logo-glb" src="logo.glb"></a-assets-item>
-        </a-assets> 
+          <a-asset-item id="logo-glb" src="logo.glb"></a-asset-item>
+        </a-asset> 
         <!-- Modelo 3D del museo y objetos internos -->
         <a-entity gltf-model="#museo2-glb" scale="0.1 0.1 0.1"></a-entity>
         <a-entity gltf-model="logo-glb" position="0 0 0" scale="10 10 10" rotation="90 0 90"></a-entity>
