--- a/index.html
+++ b/index.html
@@ -11,32 +11,29 @@
     <a-scene>
         <!-- Carga de modelos -->
         <a-assets>
-          <a-asset-item id="museo2-glb" src="https://bdosantos.github.io/Sigma/museo2.glb"></a-asset-item>
-          <a-asset-item id="logo-glb" src="logo.glb"></a-asset-item>
-        </a-asset> 
+            <a-asset-item id="museo2-glb" src="https://bdosantos.github.io/Sigma/museo2.glb"></a-asset-item>
+            <a-asset-item id="logo-glb" src="https://tusitio.com/logo.glb"></a-asset-item> <!-- Asegúrate de que la URL sea correcta -->
+        </a-assets> 
+
         <!-- Modelo 3D del museo y objetos internos -->
         <a-entity gltf-model="#museo2-glb" scale="0.1 0.1 0.1"></a-entity>
         <a-entity gltf-model="#logo-glb" position="0 0 0" scale="10 10 10" rotation="90 0 90"></a-entity>
-            <!-- Luz ambiental con intensidad baja para evitar sobreiluminar las paredes -->
-            <a-light type="ambient" color="#FFFFFF" intensity="0.35"></a-light>
 
+        <!-- Luz ambiental -->
+        <a-light color="#FFFFFF" intensity="0.35"></a-light>
 
-            <!-- Cámara dentro del museo con controles de mira y controles WASD -->
-            
-          <!-- Cámara dentro del museo con controles de mira y controles WASD -->
-            <a-entity camera look-controls wasd-controls="acceleration: 150" position="0 6 0"></a-entity>
+        <!-- Cámara dentro del museo con controles de mira y controles WASD -->
+        <a-entity camera look-controls wasd-controls="acceleration: 150" position="0 6 0"></a-entity>
 
+        <!-- Luz direccional -->
+        <a-light color="#FFFFFF" intensity="1" position="0 100 -300" rotation="-45 0 0"></a-light>
 
-            <!-- Luz direccional baja para iluminar el suelo sin afectar mucho a las paredes -->
-            <a-light type="directional" color="#FFFFFF" intensity="1" position="0 100 -300" rotation="-45 0 0"></a-light>
+        <!-- Luces puntuales ajustadas para iluminar el suelo dentro del museo -->
+        <a-light color="#FFFFFF" intensity="0.4" position="0 50 -500" distance="500"></a-light>
+        <a-light color="#FFFFFF" intensity="0.35" position="100 50 100" distance="400"></a-light>
+        <a-light color="#FFFFFF" intensity="0.35" position="-100 50 -100" distance="400"></a-light>
+        <a-light color="#FFFFFF" intensity="0.3" position="0 50 -200" distance="300"></a-light>
 
-
-            <!-- Luces puntuales ajustadas para iluminar el suelo dentro del museo -->
-            <a-light type="point" color="#FFFFFF" intensity="0.4" position="0 50 -500" distance="500"></a-light>
-            <a-light type="point" color="#FFFFFF" intensity="0.35" position="100 50 100" distance="400"></a-light>
-            <a-light type="point" color="#FFFFFF" intensity="0.35" position="-100 50 -100" distance="400"></a-light>
-            <a-light type="point" color="#FFFFFF" intensity="0.3" position="0 50 -200" distance="300"></a-light>
-        </a-entity>
     </a-scene>
 </body>
 </html>
