--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Carga de modelos -->
         <a-assets>
             <a-asset-item id="museo2-glb" src="https://bdosantos.github.io/Sigma/museo2.glb"></a-asset-item>
-            <a-asset-item id="logo-glb" src="https://tusitio.com/logo.glb"></a-asset-item> <!-- Asegúrate de que la URL sea correcta -->
+            <a-asset-item id="logo-glb" src="logo.glb"></a-asset-item> <!-- Asegúrate de que la URL sea correcta -->
         </a-assets> 
 
         <!-- Modelo 3D del museo y objetos internos -->
