--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
         <a-entity gltf-model="#museo2-glb" scale="0.1 0.1 0.1"></a-entity>
         <a-entity gltf-model="#logo-glb" position="36 8 0" scale="0.5 0.5 0.5" rotation="270 0 90"></a-entity>
 
-        <!-- Luz ambiental -->
-        <a-light color="#FFFFFF" intensity="0.35"></a-light>
+        <!-- Luz ambiental con tono cálido -->
+        <a-light color="#FFAA00" intensity="0.35"></a-light>
 
         <!-- Cámara dentro del museo con controles de mira y controles WASD -->
         <a-entity camera look-controls wasd-controls="acceleration: 150" position="0 6 0"></a-entity>
 
-        <!-- Luz direccional -->
-        <a-light color="#FFFFFF" intensity="1" position="0 100 -300" rotation="-45 0 0"></a-light>
+        <!-- Luz direccional con tono cálido -->
+        <a-light color="#FF6600" intensity="1" position="0 100 -300" rotation="-45 0 0"></a-light>
 
-        <!-- Luces puntuales ajustadas para iluminar el suelo dentro del museo -->
-        <a-light color="#FFFFFF" intensity="0.6" position="0 50 -500" distance="500"></a-light>
-        <a-light color="#FFFFFF" intensity="0.5" position="100 50 100" distance="400"></a-light>
-        <a-light color="#FFFFFF" intensity="0.5" position="-100 50 -100" distance="400"></a-light>
-        <a-light color="#FFFFFF" intensity="0.5" position="0 50 -200" distance="300"></a-light>
+        <!-- Luces puntuales ajustadas para iluminar el suelo dentro del museo, con tono cálido -->
+        <a-light color="#FF9900" intensity="0.6" position="0 50 -500" distance="500"></a-light>
+        <a-light color="#FF8800" intensity="0.5" position="100 50 100" distance="400"></a-light>
+        <a-light color="#FF8800" intensity="0.5" position="-100 50 -100" distance="400"></a-light>
+        <a-light color="#FF6600" intensity="0.5" position="0 50 -200" distance="300"></a-light>
 
     </a-scene>
 </body>
 </html>
+
